--- a/backend/package.json
+++ b/backend/package.json
@@ -34,6 +34,7 @@
     "express-rate-limit": "^7.5.0",
     "express-session": "^1.18.1",
     "express-validator": "^7.2.1",
+    "helmet": "^7.2.0",
     "md5": "^2.3.0",
     "morgan": "^1.10.0",
     "multer": "^1.4.5-lts.2",
